tests/reference/asr-sign_01-62b270e.stderr
semantic error: Type and kind of the relevant arguments of Sign must be the same
 --> tests/errors/sign_01.f90:2:14
  |
2 |     print *, sign(1, 1_8)
  |              ^^^^^^^^^^^^ 
